--- a/fastauth.config.example.json
+++ b/fastauth.config.example.json
@@ -2,7 +2,7 @@
     "app-name": "fastauth",
     "database-api-path": "http://127.0.0.1:6789/mydb/data",
     "master-token": "<your-master-token>",
-    "crypto-key": "<your-32-byte-crypto-key>",
+    "criptografy-key": "<your-32-byte-criptografy-key>",
     "master-token-paths": [
         "list of your root endpoints that need master token for use"
     ],
